# BoxPilot

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  windows-check.yml
crates/boxpilot-ipc/: Cargo.toml
crates/boxpilot-ipc/src/: config.rs  core.rs  diagnostics.rs  error.rs  home.rs  install_state.rs  legacy.rs  lib.rs  method.rs  profile.rs  redact.rs  response.rs  service.rs
crates/boxpilot-ipc/tests/: policy_drift.rs
crates/boxpilot-platform/: Cargo.toml
crates/boxpilot-platform/src/: lib.rs  paths.rs
crates/boxpilot-platform/src/fakes/: active.rs  authority.rs  bundle_aux.rs  core_assets.rs  current.rs  env.rs  fs_meta.rs  fs_perms.rs  ipc.rs  lock.rs  logs.rs  mod.rs  service.rs  trust.rs  user_lookup.rs  version.rs
crates/boxpilot-platform/src/linux/: active.rs  authority.rs  bundle.rs  core_assets.rs  current.rs  env.rs  fs_meta.rs  fs_perms.rs  ipc.rs  lock.rs  logs.rs  mod.rs  service.rs  trust.rs  user_lookup.rs  version.rs
crates/boxpilot-platform/src/traits/: active.rs  authority.rs  bundle_aux.rs  core_assets.rs  current.rs  env.rs  fs_meta.rs  fs_perms.rs  ipc.rs  lock.rs  logs.rs  mod.rs  service.rs  trust.rs  user_lookup.rs  version.rs
crates/boxpilot-platform/src/windows/: active.rs  authority.rs  bundle.rs  core_assets.rs  current.rs  env.rs  fs_meta.rs  fs_perms.rs  ipc.rs  lock.rs  logs.rs  mod.rs  service.rs  trust.rs  user_lookup.rs  version.rs
crates/boxpilot-profile/: Cargo.toml
crates/boxpilot-profile/src/: asset_check.rs  bundle.rs  check.rs  editor.rs  import.rs  lib.rs  list.rs  meta.rs  redact.rs  remote.rs  remotes.rs  snapshot.rs  store.rs  ui_state.rs
crates/boxpilot-tauri/: Cargo.toml  tauri.conf.json
crates/boxpilot-tauri/capabilities/: default.json
crates/boxpilot-tauri/src/: commands.rs  helper_client.rs  lib.rs  main.rs  profile_cmds.rs
crates/boxpilotd/: Cargo.toml
crates/boxpilotd/src/: authority.rs  context.rs  controller.rs  credentials.rs  dispatch.rs  dispatch_handler.rs  iface.rs  lock.rs  main.rs  paths.rs  systemd.rs
crates/boxpilotd/src/core/: adopt.rs  commit.rs  discover.rs  download.rs  github.rs  install.rs  mod.rs  rollback.rs  state.rs  trust.rs
crates/boxpilotd/src/diagnostics/: bundle.rs  gc.rs  mod.rs  sysinfo.rs
crates/boxpilotd/src/entry/: linux.rs  mod.rs  windows.rs
crates/boxpilotd/src/handlers/: controller_transfer.rs  core_adopt.rs  core_discover.rs  core_install_managed.rs  core_rollback_managed.rs  core_upgrade_managed.rs  diagnostics_export_redacted.rs  home_status.rs  legacy_migrate_service.rs  legacy_observe_service.rs  mod.rs  profile_activate_bundle.rs  profile_rollback_release.rs  service_disable.rs  service_enable.rs  service_install_managed.rs  service_logs.rs  service_restart.rs  service_start.rs  service_status.rs  service_stop.rs
crates/boxpilotd/src/legacy/: backup.rs  migrate.rs  mod.rs  observe.rs  path_safety.rs  unit_parser.rs
crates/boxpilotd/src/profile/: activate.rs  checker.rs  gc.rs  mod.rs  recovery.rs  release.rs  rollback.rs  unpack.rs  verifier.rs
crates/boxpilotd/src/service/: control.rs  install.rs  logs.rs  mod.rs  unit.rs  verify.rs
debian/: README.Debian  boxpilot.dirs  boxpilot.install  boxpilot.links  changelog  control  copyright  postinst  postrm  prerm  rules
docs/superpowers/plans/: 2026-04-27-boxpilot-skeleton-and-helperd.md  2026-04-27-skeleton-smoke-procedure.md  2026-04-28-boxpilot-managed-core.md  2026-04-28-managed-core-smoke-procedure.md  2026-04-29-boxpilot-managed-service.md  2026-04-29-legacy-service-handling-smoke-procedure.md  2026-04-29-legacy-service-handling.md  2026-04-29-managed-service-smoke-procedure.md  2026-04-30-activation-pipeline-smoke-procedure.md  2026-04-30-activation-pipeline.md  2026-04-30-boxpilot-gui-shell.md  2026-04-30-boxpilot-profile-store.md  2026-04-30-deb-packaging-smoke-procedure.md  2026-04-30-deb-packaging.md  2026-04-30-diagnostics-export-smoke-procedure.md  2026-04-30-diagnostics-export.md  2026-04-30-gui-shell-smoke-procedure.md  2026-04-30-profile-store-smoke-procedure.md  2026-05-01-boxpilot-platform-abstraction.md  2026-05-02-boxpilot-windows-port-sub-project-2.md
docs/superpowers/specs/: 2026-04-27-boxpilot-linux-design.md  2026-04-28-boxpilot-managed-core.md  2026-04-30-activation-pipeline-design.md  2026-04-30-deb-packaging-design.md  2026-04-30-diagnostics-export-design.md  2026-04-30-gui-shell-design.md  2026-05-01-boxpilot-platform-abstraction-design.md  2026-05-02-boxpilot-windows-port-sub-project-2-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: helper.ts  profile.ts  types.ts
frontend/src/components/: AppShell.vue  CoresPanel.vue  ProfilesPanel.vue  ServicePanel.vue  Toast.vue
frontend/src/components/home/: ActiveProfileCard.vue  CoreCard.vue  DriftBanner.vue  LogsPanel.vue  QuickActions.vue  ServiceCard.vue
frontend/src/components/profiles/: ProfileActivate.vue  ProfileDetail.vue  ProfileEditor.vue  ProfileList.vue  ProfileOverview.vue
frontend/src/components/settings/: AboutTab.vue  CoresTab.vue  LegacyTab.vue  ServiceTab.vue
frontend/src/composables/: useBusy.ts  useCores.ts  useHomeStatus.ts  useProfiles.ts  useToast.ts
frontend/src/views/: HomeView.vue  ProfilesView.vue  SettingsView.vue
packaging/linux/dbus/system-services/: app.boxpilot.Helper.service
packaging/linux/dbus/system.d/: app.boxpilot.helper.conf
packaging/linux/desktop/: app.boxpilot.desktop
packaging/linux/polkit-1/actions/: app.boxpilot.helper.policy
packaging/linux/polkit-1/rules.d/: 49-boxpilot.rules
packaging/linux/systemd/: boxpilot-sing-box.service.in  boxpilotd.service
scripts/: check.sh
