[workspace]
resolver = "2"
members = [
    "crates/boxpilot-ipc",
    "crates/boxpilotd",
    "crates/boxpilot-tauri",
    "crates/boxpilot-profile",
]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "GPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "sync"] }
url = "2"
zbus = { version = "5", default-features = false, features = ["tokio"] }
fs2 = "0.4"
nix = { version = "0.29", features = ["user", "fs"] }
tempfile = "3"
pretty_assertions = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3"
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
