[package]
name = "boxpilot-profile"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
boxpilot-ipc = { path = "../boxpilot-ipc" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true }
chrono = { workspace = true }
sha2.workspace = true
hex.workspace = true
nix = { workspace = true }
libc = { workspace = true }
tempfile.workspace = true
reqwest = { workspace = true }
async-trait.workspace = true
url.workspace = true
tar.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
