[package]
name = "boxpilot-profile"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
boxpilot-ipc = { path = "../boxpilot-ipc" }
boxpilot-platform = { path = "../boxpilot-platform" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true }
chrono = { workspace = true }
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true
reqwest = { workspace = true }
async-trait.workspace = true
url.workspace = true
tar.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
pretty_assertions.workspace = true
