[package]
name = "boxpilot"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "boxpilot"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "boxpilot"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
boxpilot-ipc = { path = "../boxpilot-ipc" }
boxpilot-profile = { path = "../boxpilot-profile" }
boxpilot-platform = { path = "../boxpilot-platform" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = [] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { workspace = true }
