[package]
name = "boxpilotd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "boxpilotd"
path = "src/main.rs"

[dependencies]
boxpilot-ipc = { path = "../boxpilot-ipc" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "fs", "sync"] }
zbus.workspace = true
fs2.workspace = true
nix.workspace = true
async-trait = "0.1"

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
