[package]
name = "boxpilotd"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "boxpilotd"
path = "src/main.rs"

[dependencies]
boxpilot-ipc = { path = "../boxpilot-ipc" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "fs", "sync", "process"] }
zbus.workspace = true
fs2.workspace = true
nix.workspace = true
async-trait.workspace = true
reqwest.workspace = true
sha2.workspace = true
flate2.workspace = true
tar.workspace = true
hex.workspace = true
chrono.workspace = true
futures-util.workspace = true
tempfile.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
filetime = "0.2"
